feat: Add/update index.html for round 2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>i love Bharat</title>
+    <title>I am really proud of my bharat</title>
     <!-- highlight.js CSS for styling code blocks -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
     <style>
@@ -45,7 +45,7 @@
     <div class="highlight-container">
         <h1>
             <!-- The title text is placed inside <pre><code> to be processed by highlight.js -->
-            <pre><code class="language-plaintext">i love Bharat</code></pre>
+            <pre><code class="language-plaintext">I am really proud of my bharat</code></pre>
         </h1>
     </div>
 
